Added photocell and servo

--- a/dht.html
+++ b/dht.html
@@ -22,7 +22,7 @@
       }
     },
     label: function() {
-      return 'dht.' + this.action;
+      return 'dht ' + this.action;
     }
   });
 }());
