Refactor led, dht, photocell

--- a/dht.html
+++ b/dht.html
@@ -15,14 +15,10 @@
       pin: {
         value: '10',
         required: true
-      },
-      action: {
-        value: 'read',
-        required: true
       }
     },
     label: function() {
-      return 'dht ' + this.action;
+      return 'dht (' + this.pin + ')';
     }
   });
 }());
@@ -35,6 +31,10 @@
   <div class="form-row">
     <label for="node-input-pin">Pin</label>
     <select type="text" id="node-input-pin">
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
       <option value="6">6</option>
       <option value="7">7</option>
       <option value="8">8</option>
@@ -43,13 +43,6 @@
       <option value="11">11</option>
       <option value="12">12</option>
       <option value="13">13</option>
-    </select>
-  </div>
-  <div class="form-row">
-    <label for="node-input-action">Action</label>
-    <select type="text" id="node-input-action">
-      <option value="read">read</option>
-      <option value="stopRead">stopRead</option>
     </select>
   </div>
 </script>
