--- a/photocell.html
+++ b/photocell.html
@@ -24,7 +24,7 @@
       }
     },
     label: function() {
-      return 'photocell';
+      return 'photocell (' + this.pin + ')';
     }
   });
 }());
