--- a/led.html
+++ b/led.html
@@ -15,14 +15,10 @@
       pin: {
         value: '10',
         required: true
-      },
-      action: {
-        value: 'on',
-        required: true
       }
     },
     label: function() {
-      return 'led ' + this.action;
+      return 'led (' + this.pin + ')';
     }
   });
 }());
@@ -47,14 +43,6 @@
       <option value="11">11</option>
       <option value="12">12</option>
       <option value="13">13</option>
-    </select>
-  </div>
-  <div class="form-row">
-    <label for="node-input-action">Action</label>
-    <select type="text" id="node-input-action">
-      <option value="on">on</option>
-      <option value="off">off</option>
-      <option value="blink">blink</option>
     </select>
   </div>
 </script>
