--- a/dht.html
+++ b/dht.html
@@ -17,6 +17,7 @@
         required: true
       }
     },
+    icon: 'icon.png',
     label: function() {
       return 'dht (' + this.pin + ')';
     }
