--- a/photocell.html
+++ b/photocell.html
@@ -23,6 +23,7 @@
         value: '100'
       }
     },
+    icon: 'icon.png',
     label: function() {
       return 'photocell (' + this.pin + ')';
     }
