--- a/led.html
+++ b/led.html
@@ -17,6 +17,7 @@
         required: true
       }
     },
+    icon: 'icon.png',
     label: function() {
       return 'led (' + this.pin + ')';
     }
