--- a/led.html
+++ b/led.html
@@ -44,6 +44,23 @@
       <option value="11">11</option>
       <option value="12">12</option>
       <option value="13">13</option>
+      <option value="14">14</option>
+      <option value="15">15</option>
+      <option value="16">16</option>
+      <option value="17">17</option>
+      <option value="18">18</option>
+      <option value="19">19</option>
     </select>
   </div>
+</script>
+<script type="text/x-red" data-help-name="led">
+  <p>Send messages to control a LED.</p>
+  <p>msg.payload = <b>method<i>[, parameter list...]</i></b>
+    <ul>
+      <li><b>on</b> - Turn the LED on</li>
+      <li><b>off</b> - Turn the LED off</li>
+      <li><b>toggle</b> - Toggle the LED</li>
+      <li><b>blink,200</b> - Blink the LED every 200 ms</li>
+    </ul>
+  </p>
 </script>
