--- a/photocell.html
+++ b/photocell.html
@@ -59,11 +59,11 @@
   </div>
 </script>
 <script type="text/x-red" data-help-name="photocell">
-  <p>Sending message to trigger photocell.</p>
-  <p>msg.payload
+  <p>Send messages to control a photocell sensor.</p>
+  <p>msg.payload = <b>method<i>[, parameter list...]</i></b>
     <ul>
-      <li><b>on</b> - turn on</li>
-      <li><b>of</b> - turn off</li>
+      <li><b>on</b> - Start</li>
+      <li><b>off</b> - Stop</li>
     </ul>
   </p>
 </script>
