--- a/board.html
+++ b/board.html
@@ -5,7 +5,8 @@
   var map = {
     mqtt: 'device',
     serial: 'path',
-    bluetooth: 'address'
+    bluetooth: 'address',
+    websocket: 'url'
   };
 
   function updateButtonStatus() {
@@ -25,6 +26,9 @@
         value: '',
         required: true
       },
+      board: {
+        value: ''
+      },
       device: {
         value: ''
       },
@@ -32,6 +36,9 @@
         value: ''
       },
       address: {
+        value: ''
+      },
+      url: {
         value: ''
       }
     },
@@ -48,30 +55,41 @@
             $('.row-mqtt').show();
             $('.row-serial').hide();
             $('.row-bluetooth').hide();
+            $('.row-websocket').hide();
             break;
 
           case 'serial':
             $('.row-mqtt').hide();
             $('.row-serial').show();
             $('.row-bluetooth').hide();
+            $('.row-websocket').hide();
             break;
 
           case 'bluetooth':
             $('.row-mqtt').hide();
             $('.row-serial').hide();
             $('.row-bluetooth').show();
+            $('.row-websocket').hide();
+            break;
+
+          case 'websocket':
+            $('.row-mqtt').hide();
+            $('.row-serial').hide();
+            $('.row-bluetooth').hide();
+            $('.row-websocket').show();
             break;
 
           default:
             $('.row-mqtt').hide();
             $('.row-serial').hide();
             $('.row-bluetooth').hide();
+            $('.row-websocket').hide();
             break;
         }
         updateButtonStatus();
       });
 
-      $('#node-config-input-device, #node-config-input-path, #node-config-input-address').on('keyup', function() {
+      $('#node-config-input-device, #node-config-input-path, #node-config-input-address, #node-config-input-url').on('keyup', function () {
         updateButtonStatus();
       });
 
@@ -89,6 +107,15 @@
       <option value='mqtt'>mqtt</option>
       <option value='serial'>serial</option>
       <option value='bluetooth'>bluetooth</option>
+      <option value='websocket'>websocket</option>
+    </select>
+  </div>
+  <div class='form-row row-board'>
+    <label for='node-config-input-board'>Board</label>
+    <select type='text' id='node-config-input-board'>
+      <option value=''>Mark 1</option>
+      <option value=''>Fly</option>
+      <option value='Smart'>Smart</option>
     </select>
   </div>
   <div class='form-row row-mqtt'>
@@ -102,5 +129,9 @@
   <div class='form-row row-bluetooth'>
     <label for='node-config-input-address'>Address</label>
     <input type='text' id='node-config-input-address' placeholder='Address'>
+  </div>
+  <div class='form-row row-websocket'>
+    <label for='node-config-input-url'>Url</label>
+    <input type='text' id='node-config-input-url' placeholder='Url'>
   </div>
 </script>
